--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,5 +12,7 @@ jobs:
           python-version: '3.8.10'
       - name: "Install style numpy"
         run: pip install --user numpy
+      - name: "Test nonlinear solvers"
+        run: python -m unittest tests/test_nonlinear_solver.py
       - name: "Run convergence and accuracy tests"
         run: python -m unittest test_convergence_and_accuracy_simple_ode.py
