--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,9 @@
 [metadata]
-name = runge-kutta-ajaust
-version = 0.0.1
+name = rungekutta
+version = 0.0.1dev
 author = Alexander Jaust
 author_email = alexander.jaust@ipvs.uni-stuttgart.de
-description = A small example package
+description = A package providing Runge-Kutta methods for solving ordinary differential equations
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/pypa/sampleproject
@@ -11,7 +11,7 @@ project_urls =
     Bug Tracker = https://github.com/pypa/sampleproject/issues
 classifiers =
     Programming Language :: Python :: 3
-    License :: OSI Approved :: MIT License
+    #License :: OSI Approved :: MIT License
     Operating System :: OS Independent
 
 [options]
