--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,6 +12,8 @@ jobs:
           python-version: '3.8.10'
       - name: "Install style numpy"
         run: pip install --user numpy
+      - name: "Install rungekutta module"
+        run: pip install .
       - name: "Test nonlinear solvers"
         run: python -m unittest tests/test_nonlinear_solver.py
       - name: "Run convergence and accuracy tests"
