--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -3,7 +3,7 @@ name: Convergence and accuracy tests
 on: [push]
 
 jobs:
-  style_check:
+  accuracy_tests:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
