--- a/.github/workflows/run-examples.yml
+++ b/.github/workflows/run-examples.yml
@@ -10,8 +10,8 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: '3.8.10'
-      - name: "Install style numpy"
-        run: pip install --user numpy
+      - name: "Install style numpy matplotlib"
+        run: pip install --user numpy matplotlib
       - name: "Install rungekutta module"
         run: pip install --user .
       - name: "Run examples for explicit methods"
