--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = rungekutta
-version = 0.0.1dev
+version = 0.1.0dev
 author = Alexander Jaust
 author_email = alexander.jaust@ipvs.uni-stuttgart.de
 description = A package providing Runge-Kutta methods for solving ordinary differential equations
@@ -11,7 +11,7 @@ project_urls =
     Bug Tracker = https://github.com/pypa/sampleproject/issues
 classifiers =
     Programming Language :: Python :: 3
-#    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
+    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
     Operating System :: OS Independent
 
 [options]
