--- a/.github/workflows/run-examples.yml
+++ b/.github/workflows/run-examples.yml
@@ -30,3 +30,5 @@ jobs:
           python examples/example_implicit_methods_for_systems.py
           echo "Run example: example_test_implicit_methods_convergence.py"
           python examples/example_test_implicit_methods_convergence.py
+          echo "Run example: example_test_implicit_methods_convergence.py"
+          python examples/example_test_implicit_methods_convergence.py
