--- a/setup.cfg
+++ b/setup.cfg
@@ -6,9 +6,9 @@ author_email = alexander.jaust@ipvs.uni-stuttgart.de
 description = A package providing Runge-Kutta methods for solving ordinary differential equations
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/pypa/sampleproject
+url = git@github.com:SC-SGS/python-runge-kutta.git
 project_urls =
-    Bug Tracker = https://github.com/pypa/sampleproject/issues
+    Bug Tracker = git@github.com:SC-SGS/python-runge-kutta.git/issues
 classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: GNU General Public License v3 (GPLv3)
